v0.11.0/_sources/gallery/symbols/text_symbols.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/symbols/text_symbols.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_symbols_text_symbols.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_symbols_text_symbols.py:


Text symbols
============

The :meth:`pygmt.Figure.plot` method allows to plot text symbols. Text is
normally placed with the :meth:`pygmt.Figure.text` method but there are times
we wish to treat a character or even a string as a plottable symbol.
A text symbol can be drawn by passing **l**\ *size*\ **+t**\ *string* to
the ``style`` parameter where *size* defines the size of the text symbol
(note: the size is only approximate; no individual scaling is done for
different characters) and *string* can be a letter or a text string
(less than 256 characters). Optionally, you can append
**+f**\ *font,outlinecolor* to select a particular font [Default is
:gmt-term:`FONT_ANNOT_PRIMARY`] and outline color [Default is black] as well
as **+j**\ *justify* to change the justification [Default is CM]. The fill
color of the text symbols can be set with the ``fill`` parameter, and the
outline width can be customized with the ``pen`` parameter.
For all supported octal codes and fonts see the GMT Technical Reference
:gmt-docs:`reference/octal-codes.html` and
:gmt-docs:`reference/postscript-fonts.html`.

.. GENERATED FROM PYTHON SOURCE LINES 24-46



.. image-sg:: /gallery/symbols/images/sphx_glr_text_symbols_001.png
   :alt: text symbols
   :srcset: /gallery/symbols/images/sphx_glr_text_symbols_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()

    fig.basemap(region=[0, 8, 0, 3], projection="X12c/4c", frame=True)

    pen = "1.5p"
    # plot an uppercase "A" of size 3.5c, color fill is set to "dodgerblue3"
    fig.plot(x=1, y=1.5, style="l3.5c+tA", fill="dodgerblue3", pen=pen)
    # plot an "asterisk" of size 3.5c, color fill is set to "red3"
    fig.plot(x=2.5, y=1, style="l3.5c+t*", fill="red3", pen=pen)
    # plot an uppercase "Z" of size 3.5c and use the "Courier-Bold" font,
    # color fill is set to "seagreen"
    fig.plot(x=4, y=1.5, style="l3.5c+tZ+fCourier-Bold", fill="seagreen", pen=pen)
    # plot a lowercase "s" of size 3.5c and use the "Times-Italic" font,
    # color fill is set to "gold"
    fig.plot(x=5.5, y=1.5, style="l3.5c+ts+fTimes-Italic", fill="gold", pen=pen)
    # plot the pi symbol of size 3.5c, the outline color of the symbol is set to
    # "darkorange", the color fill is set to "magenta4"
    fig.plot(x=7, y=1.5, style="l3.5c+tπ+fdarkorange", fill="magenta4", pen=pen)

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.137 seconds)


.. _sphx_glr_download_gallery_symbols_text_symbols.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: text_symbols.ipynb <text_symbols.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: text_symbols.py <text_symbols.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
